Changes for templates:

2009-10-24: version 1.1.3

	* This is a bug-fix release only, and contains no template changes.
	* To upgrade from the previous release, upgrade ss_get_mysql_stats.php.
	* MySQL 5.1 broke backwards compatibility with table_cache (issue 63).
	* Added a version number to the script (partial fix for issue 79).
	* Added a test suite (issue 76, issue 59).
	* Math operations were done in MySQL instead of PHP (issue 25).
	* SHOW STATUS values didn't override SHOW INNODB STATUS parsing (issue 24).
	* Long error messages were not appearing in the Cacti log.
	* SHOW INNODB STATUS parsing for unpurged_txns was broken.
	* SHOW INNODB STATUS parsing for innodb_lock_structs was broken.
	* SHOW INNODB STATUS parsing for pending_log_flushes was broken (issue 62).
	* SHOW INNODB STATUS parsing for pending_buf_pool_flushes was broken.
	* SHOW INNODB STATUS parsing for pending_ibuf_aio_reads was broken.
	* SHOW INNODB STATUS parsing for pending_aio_log_ios was broken.
	* SHOW INNODB STATUS parsing for pending_aio_sync_ios was broken.
	* Made SHOW INNODB STATUS parsing less sensitive to false positive matches.

2009-05-07: version 1.1.2

	* The parsing code did not handle InnoDB plugin / XtraDB (issue 52).
	* The servername was hardcoded in ss_get_by_ssh.php (issue 57).
	* Added Handler_ graphs (issue 47).
	* Config files can be used instead of editing the .php file (issue 39).
	* binary log space is now calculated without a MySQL query (issue 48).
	* There was no easy way to force inputs to be filled (issue 45).
	* Some graphs were partially hidden without --lower-limit (issue 43).
	* Flipped some elements across the Y axis (issue 42).
	* Added Apache, Nginx, and GNU/Linux templates.
	* Unknown output is now -1 instead of 0 to prevent spikes in graphs.
	* If you want to use a script server, you must now explicitly configure it.
	* UNIX sockets weren't permitted for MySQL (issue 38).

2008-10-15: version 1.1.1
